[project]
name = "comfyui_http_api"
description = "A collection of custom nodes for interacting with ComfyUI's internal HTTP APIs, such as fetching files from workflows."
version = "0.0.2"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/jtydhr88/ComfyUI-http-api"
#  Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "jtydhr88"
DisplayName = "ComfyUI HTTP API"
Icon = ""
includes = ['js']